--- a/index.html
+++ b/index.html
@@ -19,7 +19,6 @@
       overflow: hidden;
       position: relative;
 
-      /* soft off-white paper texture */
       background:
         radial-gradient(circle at 20% 15%, rgba(0,0,0,0.025), transparent 45%),
         radial-gradient(circle at 80% 35%, rgba(0,0,0,0.018), transparent 50%),
@@ -110,10 +109,8 @@
       transition: opacity 220ms ease, transform 220ms ease;
     }
 
-    /* secret note reveal */
-    .soft-in {
-      animation: softIn 260ms ease-out;
-    }
+    /* reveal animation */
+    .soft-in { animation: softIn 260ms ease-out; }
     @keyframes softIn {
       0% { opacity: 0; transform: translate(calc(-50% + var(--dx)), calc(-50% + var(--dy))) rotate(var(--rot)) scale(0.98); }
       100% { opacity: 1; transform: translate(calc(-50% + var(--dx)), calc(-50% + var(--dy))) rotate(var(--rot)) scale(1); }
@@ -132,17 +129,13 @@
       100% { transform: translateY(-60px) scale(1.15); opacity: 0; }
     }
 
-    /* =========================================================
-       BURST SYSTEM (non-vertical on deploy)
-    ========================================================== */
-
+    /* ---------- BURST LAYER ---------- */
     #burstLayer{
       position: fixed;
       inset: 0;
       pointer-events: none;
       z-index: 9998;
     }
-
     .particle{
       position: absolute;
       pointer-events: none;
@@ -158,15 +151,12 @@
         flyOut 520ms ease-out forwards,
         fadeOut 520ms ease-out forwards;
     }
-
     @keyframes flyOut{
       to {
         transform: translate(-50%, -50%) translate(var(--dx), var(--dy)) scale(calc(var(--s) * 0.85)) rotate(calc(var(--r) + 55deg));
       }
     }
-    @keyframes fadeOut{
-      to { opacity: 0; }
-    }
+    @keyframes fadeOut{ to { opacity: 0; } }
 
     .heart {
       width: 10px;
@@ -315,7 +305,7 @@
     }
     .spotify-title { font-size: 1.05rem; }
 
-    /* ---------- LOVE CALCULATOR ---------- */
+    /* ---------- LOVE CALCULATOR (FIXED LAYOUT) ---------- */
     .calc {
       width: 100%;
       height: 100%;
@@ -330,14 +320,15 @@
     .calcTitle { font-size: 1.12rem; }
     .calcRow{
       display: flex;
-      gap: 8px;
+      gap: 10px;
       width: 92%;
       justify-content: center;
-      flex-wrap: wrap;
+      align-items: center;
+      flex-wrap: nowrap;
     }
     .calcInput{
-      width: 44%;
-      min-width: 110px;
+      width: 46%;
+      min-width: 0;
       padding: 10px 10px;
       border-radius: 12px;
       border: 1px solid rgba(0,0,0,0.15);
@@ -346,6 +337,11 @@
       font-size: 1rem;
       outline: none;
       text-align: center;
+      box-sizing: border-box;
+    }
+    @media (max-width: 420px){
+      .calcRow{ flex-direction: column; width: 92%; }
+      .calcInput{ width: 92%; }
     }
     .calcResult{
       margin-top: 6px;
@@ -390,7 +386,6 @@
     </div>
   </div>
 
-  <!-- Burst Layer -->
   <div id="burstLayer"></div>
 
   <!-- NOTE 1 -->
@@ -428,7 +423,7 @@
     i love u Kai, truly forever and always, and with that being said...
   </div>
 
-  <!-- SEAFOAM NOTE (gentle) -->
+  <!-- SEAFOAM NOTE -->
   <div class="post-it clickable" data-love="1" id="newFeelingsNote"
        style="z-index:3; --dx:3px; --dy:15px; --rot:-0.1deg; background:#d6ebe7;"
        onclick="gentleClick(this,event)">
@@ -478,10 +473,10 @@
     </div>
   </div>
 
-  <!-- LOVE CALCULATOR (NOW BEFORE SPOTIFY) -->
-  <div class="post-it clickable hide" data-love="0" id="loveCalcNote"
+  <!-- LOVE CALCULATOR (BEFORE SPOTIFY, IN THE FLOW) -->
+  <div class="post-it clickable hide" data-love="1" id="loveCalcNote"
        style="z-index:0; --dx:10px; --dy:-12px; --rot:-0.4deg; background:#ffd7ea;"
-       onclick="peel(this,'(｡•̀ᴗ-)✧',event)">
+       onclick="calcPeelToSpotify(event)">
     <div class="calc" onclick="event.stopPropagation()">
       <div class="calcTitle">love calculator (definitely real)</div>
       <div class="calcRow">
@@ -495,23 +490,23 @@
     </div>
   </div>
 
-  <!-- SPOTIFY (note opens spotify; cover 5x unlocks secret) -->
-  <div class="post-it clickable" id="spotifyNote"
+  <!-- SPOTIFY (HIDDEN UNTIL CALC IS PEELED) -->
+  <div class="post-it clickable hide" id="spotifyNote"
        style="z-index:0; --dx:0px; --dy:18px; --rot:0.2deg; background:#bfdced;"
-       onclick="openSpotifyAndShowCalc(event)">
+       onclick="window.open('https://open.spotify.com/playlist/5coHt3xfiJXlN4iYdMt005','_blank')">
     <div class="spotify-card">
       <img id="spotifyCover" src="playlistcover.jpg" alt="Playlist cover" title="psst">
       <div class="spotify-title">Playlist for u</div>
     </div>
   </div>
 
-  <!-- SECRET NOTE (hidden until unlocked) -->
+  <!-- SECRET NOTE -->
   <div class="post-it clickable hide" data-love="0" id="secretNote"
        style="z-index:9; --dx:0px; --dy:0px; --rot:0.3deg; background:#e8ddf2;"
        onclick="peel(this,'(〃▽〃)',event)">
     i tried my best with this,<br><br>
     hope u approve mr coder 😼<br><br>
-    দ্দি(｡•̀ ,&lt;)~✩
+    دდि(｡•̀ ,&lt;)~✩
   </div>
 
   <!-- RESET -->
@@ -679,48 +674,22 @@
       }, 650);
     });
 
-    /* -------- SECRET MESSAGE EASTER EGG -------- */
-    const spotifyCover = document.getElementById('spotifyCover');
-    const secretNote = document.getElementById('secretNote');
-    let secretClicks = 0;
-
-    spotifyCover.addEventListener('click', (e) => {
-      e.stopPropagation();
-      secretClicks++;
-
-      popKaomoji('(￢‿￢ )', e, 700);
-      spawnBurst(e.clientX, e.clientY);
-
-      if (secretClicks === 5) {
-        secretClicks = 0;
-
-        secretNote.classList.remove('hide');
-        secretNote.classList.remove('soft-in');
-        void secretNote.offsetWidth;
-        secretNote.classList.add('soft-in');
-
-        popKaomoji('(〃▽〃)', e, 1200);
-      }
-    });
-
-    /* -------- Spotify click shows calculator first, then opens Spotify -------- */
+    /* -------- Love calc is a real note now; when peeled, reveal Spotify -------- */
     const loveCalcNote = document.getElementById('loveCalcNote');
-    let calcShown = false;
+    const spotifyNote = document.getElementById('spotifyNote');
 
-    function openSpotifyAndShowCalc(event){
-      // show calculator first
-      if (!calcShown) {
-        calcShown = true;
-        loveCalcNote.classList.remove('hide');
-        loveCalcNote.classList.remove('soft-in');
-        void loveCalcNote.offsetWidth;
-        loveCalcNote.classList.add('soft-in');
-      }
+    function calcPeelToSpotify(e){
+      // clicking inside the calculator UI shouldn't peel the note
+      // (but the container already stops propagation)
+      peel(loveCalcNote, '(｡•̀ᴗ-)✧', e);
 
-      // then open spotify
-      window.open('https://open.spotify.com/playlist/5coHt3xfiJXlN4iYdMt005','_blank');
-
-      spawnBurst(event.clientX, event.clientY);
+      // reveal spotify after a tiny beat so it feels like "next"
+      setTimeout(() => {
+        spotifyNote.classList.remove('hide');
+        spotifyNote.classList.remove('soft-in');
+        void spotifyNote.offsetWidth;
+        spotifyNote.classList.add('soft-in');
+      }, 220);
     }
 
     /* -------- Rigged Love Calculator -------- */
@@ -744,12 +713,8 @@
     function calcCompat(a, b){
       const A = norm(a);
       const B = norm(b);
-      const isAbiKai = (A === "abi" && B === "kai") || (A === "kai" && B === "abi");
-      if (isAbiKai) return 100;
-
-      // stable pseudo-random 12..92 (never 100)
-      const h = hashStr(A + "|" + B);
-      return 12 + (h % 81);
+      if ((A === "abi" && B === "kai") || (A === "kai" && B === "abi")) return 100;
+      return 12 + (hashStr(A + "|" + B) % 81); // 12..92
     }
 
     calcBtn.addEventListener('click', (e) => {
@@ -778,6 +743,32 @@
       spawnBurst(e.clientX, e.clientY);
       popKaomoji('(｡•̀ᴗ-)✧', e, 900);
     });
+
+    /* -------- SECRET MESSAGE EASTER EGG (Spotify cover 5 clicks) -------- */
+    const spotifyCover = document.getElementById('spotifyCover');
+    const secretNote = document.getElementById('secretNote');
+    let secretClicks = 0;
+
+    spotifyCover.addEventListener('click', (e) => {
+      e.stopPropagation();
+
+      secretClicks++;
+      popKaomoji('(￢‿￢ )', e, 700);
+      spawnBurst(e.clientX, e.clientY);
+
+      if (secretClicks === 5) {
+        secretClicks = 0;
+
+        secretNote.classList.remove('hide');
+        secretNote.classList.remove('soft-in');
+        void secretNote.offsetWidth;
+        secretNote.classList.add('soft-in');
+
+        popKaomoji('(〃▽〃)', e, 1200);
+      }
+    });
   </script>
 </body>
 </html>
+
+
